完成阀门的信息界面，当阀门节点界面点击列表项时，会触发水压值的选中事件，一个大的buge

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"/>
         <activity
             android:name=".activity.NodeActivity" />
+        <activity
+            android:name=".activity.NodeDetailActivity"/>
     </application>
 
 </manifest>
