--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
             />
         <activity
             android:name=".activity.NodeDetailActivity"/>
+        <activity
+            android:name=".activity.PortraitActivity"/>
     </application>
 
 </manifest>
