定义了用户，阀门，历史三个实体类

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,10 @@
             android:name=".activity.NodeDetailActivity"/>
         <activity
             android:name=".activity.PortraitActivity"/>
+        <activity android:name=".activity.HelpActivity"/>
+        <activity android:name=".activity.SettingActivity"/>
+        <activity android:name=".activity.WeatherActivity"/>
+
     </application>
 
 </manifest>
