--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_launcher_2"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -31,12 +31,16 @@
             android:name=".activity.NodeActivity"
             />
         <activity
-            android:name=".activity.NodeDetailActivity"/>
+            android:name=".activity.NodeDetailActivity">
+
+        </activity>
         <activity
             android:name=".activity.PortraitActivity"/>
         <activity android:name=".activity.HelpActivity"/>
         <activity android:name=".activity.SettingActivity"/>
         <activity android:name=".activity.WeatherActivity"/>
+        <activity android:name=".activity.ClockActivity"/>
+        <activity android:name=".activity.AddClockActivity"/>
 
     </application>
 
